@@ -1,4 +1,4 @@
-/* $Id: form.h,v 1.4 2001/11/24 02:01:26 ukai Exp $ */
+/* $Id: form.h,v 1.5 2001/11/30 10:10:24 ukai Exp $ */
 /*
  * HTML forms 
  */
@@ -33,11 +33,11 @@
 #define FORM_ENCTYPE_URLENCODED 0
 #define FORM_ENCTYPE_MULTIPART  1
 
-#define MAX_TEXTAREA 10		/* max number of * <textarea>..</textarea> 
-				 * * within one * document */
+#define MAX_TEXTAREA 10		/* max number of <textarea>..</textarea> 
+				 * within one document */
 #ifdef MENU_SELECT
-#define MAX_SELECT 10		/* max number of <select>..</select> *
-				 * * within one document */
+#define MAX_SELECT 10		/* max number of <select>..</select>
+				 * within one document */
 #endif				/* MENU_SELECT */
 
 typedef struct form_list {
